// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatisticsWidget renders as expected 1`] = `
<div>
  <div
    class="bg-gunmetal-700 rounded-sm mx-6 p-6"
  >
    <p>
      Title
    </p>
    <p
      class="mdi text-success text-2xl font-semibold my-3"
    >
      1234$
    </p>
    <span
      class="text-sm"
    >
      Description
    </span>
  </div>
</div>
`;

exports[`StatisticsWidget renders as expected without optional params 1`] = `
<div>
  <div
    class="bg-gunmetal-700 rounded-sm mx-6 p-6"
  >
    <p>
      Title
    </p>
    <p
      class=" text-2xl font-semibold my-3"
    >
      1234$
    </p>
    <span
      class="text-sm"
    >
      Description
    </span>
  </div>
</div>
`;
